# cursat

./: README.md  cursat.opam  dune-project
_build/: log
lib/: cnf.ml  dimacs.ml  dune  lexer.mll  lit.ml  main.ml  parser.mly  solver.ml  vector.ml
test/: dune
