(lang dune 3.16)

(name cursat)

(generate_opam_files true)

(source
 (github lucasdu2/cursat))

(authors "Lucas Du")

(maintainers "Lucas Du")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name cursat)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
